--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled4.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpeNq2mddnsZ7aLHrZrRtZ",
+      "authorship_tag": "ABX9TyNTdylmNPa+KiIQEIAelNIk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
-        "outputId": "a7e77316-110d-4e4d-9e8b-79c07e61cc80",
+        "outputId": "d132bdc9-842d-4024-e8d2-4190f84a1655",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -81,7 +81,7 @@
         "print(getAllUrl(url))\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "t60DWdLQpTfg",
         "colab_type": "code",
-        "outputId": "dd8348fc-091c-49d0-c006-a99d9dce1dda",
+        "outputId": "18765385-127d-472e-c104-216716449140",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -127,20 +127,20 @@
         "    counter += 1\n",
         "   redditAll = soup.find_all(\"a\")\n",
         "  \n",
-        "   table['website'].append(url)\n",
-        "   table['number of mentioning'].append(counter)\n",
-        "   table['website size'].append(len(redditAll))\n",
-        "  \n",
         "  print(url)\n",
         "  print(len(redditAll))\n",
         "  print(counter)\n",
         "  print('--')\n",
         "\n",
+        "  table['website'].append(url)\n",
+        "  table['number of mentioning'].append(counter)\n",
+        "  table['website size'].append(len(redditAll))\n",
+        "\n",
         "df = pd.DataFrame(data = table)\n",
         "print(df)\n",
         "  "
       ],
-      "execution_count": 13,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,6 +188,246 @@
             "http://www.ebizmba.com/privacy\n",
             "61\n",
             "10\n",
+            "--\n",
+            "http://news.yahoo.com\n",
+            "120\n",
+            "132\n",
+            "--\n",
+            "http://siteanalytics.compete.com/news.yahoo.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/news.yahoo.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/news.yahoo.com/\n",
+            "173\n",
+            "71\n",
+            "--\n",
+            "http://news.google.com\n",
+            "758\n",
+            "82\n",
+            "--\n",
+            "http://siteanalytics.compete.com/news.google.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/news.google.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/news.google.com/\n",
+            "172\n",
+            "71\n",
+            "--\n",
+            "http://www.huffingtonpost.com\n",
+            "0\n",
+            "2\n",
+            "--\n",
+            "http://siteanalytics.compete.com/huffingtonpost.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/huffingtonpost.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/huffingtonpost.com/\n",
+            "172\n",
+            "71\n",
+            "--\n",
+            "http://www.cnn.com\n",
+            "230\n",
+            "24\n",
+            "--\n",
+            "http://siteanalytics.compete.com/cnn.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/cnn.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/cnn.com/\n",
+            "174\n",
+            "73\n",
+            "--\n",
+            "http://www.nytimes.com\n",
+            "146\n",
+            "47\n",
+            "--\n",
+            "http://siteanalytics.compete.com/nytimes.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/nytimes.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/nytimes.com/\n",
+            "173\n",
+            "72\n",
+            "--\n",
+            "http://www.foxnews.com\n",
+            "793\n",
+            "95\n",
+            "--\n",
+            "http://siteanalytics.compete.com/foxnews.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/foxnews.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/foxnews.com/\n",
+            "174\n",
+            "85\n",
+            "--\n",
+            "http://www.nbcnews.com\n",
+            "421\n",
+            "26\n",
+            "--\n",
+            "http://siteanalytics.compete.com/nbcnews.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/nbcnews.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/nbcnews.com/\n",
+            "174\n",
+            "81\n",
+            "--\n",
+            "http://www.dailymail.co.uk\n",
+            "1068\n",
+            "194\n",
+            "--\n",
+            "http://siteanalytics.compete.com/dailymail.co.uk\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/dailymail.co.uk\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/dailymail.co.uk\n",
+            "173\n",
+            "73\n",
+            "--\n",
+            "http://www.washingtonpost.com\n",
+            "360\n",
+            "59\n",
+            "--\n",
+            "http://siteanalytics.compete.com/washingtonpost.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/washingtonpost.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/washingtonpost.com/\n",
+            "174\n",
+            "79\n",
+            "--\n",
+            "http://www.theguardian.com\n",
+            "363\n",
+            "54\n",
+            "--\n",
+            "http://siteanalytics.compete.com/theguardian.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/theguardian.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/theguardian.com/\n",
+            "174\n",
+            "73\n",
+            "--\n",
+            "http://www.wsj.com\n",
+            "291\n",
+            "10\n",
+            "--\n",
+            "http://siteanalytics.compete.com/wsj.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/wsj.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/wsj.com/\n",
+            "173\n",
+            "73\n",
+            "--\n",
+            "http://www.abcnews.go.com\n",
+            "327\n",
+            "31\n",
+            "--\n",
+            "http://siteanalytics.compete.com/abcnews.go.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/abcnews.go.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/abcnews.go.com/\n",
+            "174\n",
+            "78\n",
+            "--\n",
+            "http://news.bbc.co.uk\n",
+            "263\n",
+            "102\n",
+            "--\n",
+            "http://siteanalytics.compete.com/news.bbc.co.uk\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/news.bbc.co.uk\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/news.bbc.co.uk/\n",
+            "173\n",
+            "69\n",
+            "--\n",
+            "http://www.usatoday.com\n",
+            "154\n",
+            "20\n",
+            "--\n",
+            "http://siteanalytics.compete.com/usatoday.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/usatoday.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/usatoday.com/\n",
+            "174\n",
+            "75\n",
+            "--\n",
+            "http://www.latimes.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://siteanalytics.compete.com/latimes.com\n",
+            "0\n",
+            "0\n",
+            "--\n",
+            "http://quantcast.com/latimes.com\n",
+            "0\n",
+            "1\n",
+            "--\n",
+            "http://www.alexa.com/siteinfo/latimes.com/\n",
+            "174\n",
+            "78\n",
             "--\n",
             "http://www.ebizmba.com/articles/best-flash-sites\n",
             "68\n",
@@ -365,77 +605,24 @@
             "59\n",
             "3\n",
             "--\n",
-            "                            website  number of mentioning  website size\n",
-            "0           http://www.ebizmba.com/                    18            70\n",
-            "1           http://www.ebizmba.com/                    18            70\n",
-            "2           http://www.ebizmba.com/                    18            70\n",
-            "3           http://www.ebizmba.com/                    18            70\n",
-            "4           http://www.ebizmba.com/                    18            70\n",
-            "..                              ...                   ...           ...\n",
-            "325  http://www.ebizmba.com/contact                     3            59\n",
-            "326  http://www.ebizmba.com/contact                     3            59\n",
-            "327  http://www.ebizmba.com/contact                     3            59\n",
-            "328  http://www.ebizmba.com/contact                     3            59\n",
-            "329  http://www.ebizmba.com/contact                     3            59\n",
+            "                                              website  ...  website size\n",
+            "0                             http://www.ebizmba.com/  ...            70\n",
+            "1              http://www.ebizmba.com/directory#admin  ...           143\n",
+            "2             http://www.ebizmba.com/directory#design  ...           143\n",
+            "3          http://www.ebizmba.com/directory#marketing  ...           143\n",
+            "4          http://www.ebizmba.com/directory#ecommerce  ...           143\n",
+            "..                                                ...  ...           ...\n",
+            "110       http://www.ebizmba.com/articles/viral-sites  ...           118\n",
+            "111  http://www.ebizmba.com/articles/web-2.0-websites  ...           118\n",
+            "112       http://www.ebizmba.com/articles/web-hosting  ...            66\n",
+            "113                    http://www.ebizmba.com/company  ...            62\n",
+            "114                    http://www.ebizmba.com/contact  ...            59\n",
             "\n",
-            "[330 rows x 3 columns]\n"
+            "[115 rows x 3 columns]\n"
           ],
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zqI4wkyB9OMN",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "seed_urls = ['https://welt.de',\n",
-        "             'https://nytimes.com',\n",
-        "             'https://theguardian.com',\n",
-        "             'https://lefigaro.fr',\n",
-        "             'https://elpais.com']\n",
-        "\n",
-        "for url in seed_urls:\n",
-        "  basic=requests.get(url).text\n",
-        "  soup=BeautifulSoup(basic, 'html.parser')\n",
-        "\n",
-        "  #b = soup.prettify()\n",
-        "  #print(b)\n",
-        "\n",
-        "  keywords={'corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus'}\n",
-        "\n",
-        "  for x in keywords:\n",
-        "   x = soup(text=re.compile('x'))\n",
-        "   rowcounter = 0\n",
-        "   for item in x:\n",
-        "    rowcounter += 1\n",
-        "  \n",
-        "  y = soup.find_all('a')\n",
-        "  colcounter = 0\n",
-        "  for item in y:\n",
-        "    colcounter += 1\n",
-        "\n",
-        "  print(rowcounter)\n",
-        "  print(colcounter)\n",
-        "\n",
-        "  result = []\n",
-        "  for i in range(0,colcounter):\n",
-        "    a=y[i].get_text(\"title\").replace(\"title\",\" \").replace(\"\\n\",\" \")\n",
-        "    result.append(a)\n",
-        " \n",
-        "  df = pd.DataFrame(data = result)\n",
-        "  print(df)\n",
-        "\n",
-        "#df.to_csv(\"formula1.csv\")\n",
-        "#uploaded = drive.CreateFile({'title': 'formula1.csv'})\n",
-        "#uploaded.SetContentFile(\"formula1.csv\")\n",
-        "#uploaded.Upload()"
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
