--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -53,14 +53,14 @@
       "metadata": {
         "id": "Ivafqztuo-Os",
         "colab_type": "code",
-        "outputId": "d2068f8a-0dd8-4281-d11d-b1c709af29f0",
+        "outputId": "3ef6210e-3a95-4663-fa0a-cac632853665",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
         }
       },
       "source": [
-        "#getting the URLs of the news sites\n",
+        "#get the URLs of the news sites\n",
         "\n",
         "#import packages\n",
         "\n",
@@ -108,7 +108,7 @@
         "print(getAllUrl(url))\n",
         "\n"
       ],
-      "execution_count": 12,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,22 +122,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6caZSYHfQNGy",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "t60DWdLQpTfg",
         "colab_type": "code",
-        "outputId": "c586f257-b6bd-41fb-b2e4-65117efdccf2",
+        "outputId": "b6c7ffbd-340d-45d0-ad32-23c7d1381c4c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -155,9 +142,7 @@
         "  except:\n",
         "   pass\n",
         "\n",
-        "  #b = soup.prettify()\n",
-        "  #print(b)\n",
-        "\n",
+        "  \n",
         "  keywords={'corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID'}\n",
         "\n",
         "  for x in keywords:\n",
@@ -165,7 +150,7 @@
         "   counter = 0\n",
         "   for item in x:\n",
         "    counter += 1\n",
-        "   redditAll = soup.find_all(\"tr\")\n",
+        "   redditAll = soup.find_all(\"a\")\n",
         "  \n",
         "  print(url)\n",
         "  print(len(redditAll))\n",
@@ -177,62 +162,62 @@
         "  table['website size'].append(len(redditAll))\n",
         "  table['url'].append(url)\n",
         "\n",
-        "df = pd.DataFrame(data = table)\n",
-        "print(df)\n",
+        "output_df = pd.DataFrame(data = table)\n",
+        "print(output_df)\n",
         "  "
       ],
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "http://www.ebizmba.com/\n",
-            "0\n",
+            "70\n",
             "18\n",
             "--\n",
             "http://www.ebizmba.com/directory#admin\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/directory#design\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/directory#marketing\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/directory#ecommerce\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/directory\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/directory#media\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/directory#research\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "javascript:bookmarksite('eBizMBA | The eBusiness Knowledgebase', 'http://www.ebizmba.com')\n",
-            "0\n",
+            "143\n",
             "42\n",
             "--\n",
             "http://www.ebizmba.com/terms\n",
-            "0\n",
+            "61\n",
             "7\n",
             "--\n",
             "http://www.ebizmba.com/privacy\n",
-            "0\n",
+            "61\n",
             "10\n",
             "--\n",
             "http://news.yahoo.com\n",
-            "0\n",
-            "129\n",
+            "124\n",
+            "126\n",
             "--\n",
             "http://siteanalytics.compete.com/news.yahoo.com\n",
             "0\n",
@@ -243,12 +228,12 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/news.yahoo.com/\n",
-            "0\n",
+            "173\n",
             "71\n",
             "--\n",
             "http://news.google.com\n",
-            "0\n",
-            "84\n",
+            "718\n",
+            "74\n",
             "--\n",
             "http://siteanalytics.compete.com/news.google.com\n",
             "0\n",
@@ -259,7 +244,7 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/news.google.com/\n",
-            "0\n",
+            "172\n",
             "71\n",
             "--\n",
             "http://www.huffingtonpost.com\n",
@@ -275,11 +260,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/huffingtonpost.com/\n",
-            "0\n",
+            "172\n",
             "71\n",
             "--\n",
             "http://www.cnn.com\n",
-            "0\n",
+            "230\n",
             "24\n",
             "--\n",
             "http://siteanalytics.compete.com/cnn.com\n",
@@ -291,11 +276,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/cnn.com/\n",
-            "0\n",
+            "174\n",
             "73\n",
             "--\n",
             "http://www.nytimes.com\n",
-            "0\n",
+            "121\n",
             "24\n",
             "--\n",
             "http://siteanalytics.compete.com/nytimes.com\n",
@@ -307,12 +292,12 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/nytimes.com/\n",
-            "0\n",
+            "173\n",
             "72\n",
             "--\n",
             "http://www.foxnews.com\n",
-            "0\n",
-            "88\n",
+            "817\n",
+            "90\n",
             "--\n",
             "http://siteanalytics.compete.com/foxnews.com\n",
             "0\n",
@@ -323,12 +308,12 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/foxnews.com/\n",
-            "0\n",
+            "174\n",
             "85\n",
             "--\n",
             "http://www.nbcnews.com\n",
-            "0\n",
-            "26\n",
+            "416\n",
+            "27\n",
             "--\n",
             "http://siteanalytics.compete.com/nbcnews.com\n",
             "0\n",
@@ -339,12 +324,12 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/nbcnews.com/\n",
-            "0\n",
+            "174\n",
             "81\n",
             "--\n",
             "http://www.dailymail.co.uk\n",
-            "3\n",
-            "170\n",
+            "942\n",
+            "173\n",
             "--\n",
             "http://siteanalytics.compete.com/dailymail.co.uk\n",
             "0\n",
@@ -355,11 +340,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/dailymail.co.uk\n",
-            "0\n",
+            "173\n",
             "73\n",
             "--\n",
             "http://www.washingtonpost.com\n",
-            "0\n",
+            "352\n",
             "58\n",
             "--\n",
             "http://siteanalytics.compete.com/washingtonpost.com\n",
@@ -371,11 +356,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/washingtonpost.com/\n",
-            "0\n",
+            "174\n",
             "79\n",
             "--\n",
             "http://www.theguardian.com\n",
-            "0\n",
+            "374\n",
             "65\n",
             "--\n",
             "http://siteanalytics.compete.com/theguardian.com\n",
@@ -387,12 +372,12 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/theguardian.com/\n",
-            "0\n",
+            "174\n",
             "73\n",
             "--\n",
             "http://www.wsj.com\n",
-            "0\n",
-            "13\n",
+            "291\n",
+            "10\n",
             "--\n",
             "http://siteanalytics.compete.com/wsj.com\n",
             "0\n",
@@ -403,11 +388,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/wsj.com/\n",
-            "0\n",
+            "173\n",
             "73\n",
             "--\n",
             "http://www.abcnews.go.com\n",
-            "0\n",
+            "326\n",
             "34\n",
             "--\n",
             "http://siteanalytics.compete.com/abcnews.go.com\n",
@@ -419,11 +404,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/abcnews.go.com/\n",
-            "0\n",
+            "174\n",
             "78\n",
             "--\n",
             "http://news.bbc.co.uk\n",
-            "0\n",
+            "261\n",
             "96\n",
             "--\n",
             "http://siteanalytics.compete.com/news.bbc.co.uk\n",
@@ -435,11 +420,11 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/news.bbc.co.uk/\n",
-            "0\n",
+            "173\n",
             "69\n",
             "--\n",
             "http://www.usatoday.com\n",
-            "0\n",
+            "152\n",
             "18\n",
             "--\n",
             "http://siteanalytics.compete.com/usatoday.com\n",
@@ -451,7 +436,7 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/usatoday.com/\n",
-            "0\n",
+            "174\n",
             "75\n",
             "--\n",
             "http://www.latimes.com\n",
@@ -467,183 +452,183 @@
             "1\n",
             "--\n",
             "http://www.alexa.com/siteinfo/latimes.com/\n",
-            "0\n",
+            "174\n",
             "78\n",
             "--\n",
             "http://www.ebizmba.com/articles/best-flash-sites\n",
-            "0\n",
+            "68\n",
             "11\n",
             "--\n",
             "http://www.ebizmba.com/articles/best-html5-websites\n",
-            "0\n",
+            "68\n",
             "13\n",
             "--\n",
             "http://www.ebizmba.com/articles/blogs\n",
-            "0\n",
+            "76\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/business-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/car-websites\n",
-            "0\n",
+            "118\n",
             "25\n",
             "--\n",
             "http://www.ebizmba.com/articles/coupon-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/dating-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/design-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/ebusiness-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/file-sharing-websites\n",
-            "0\n",
+            "118\n",
             "25\n",
             "--\n",
             "http://www.ebizmba.com/articles/funny-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/gadget-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/game-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/gossip-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/health-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/job-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/kids-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/media-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/most-popular-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/movie-websites\n",
-            "0\n",
+            "118\n",
             "25\n",
             "--\n",
             "http://www.ebizmba.com/articles/music-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/news-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/people-search\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/personal-finance-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/photo-sharing-sites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/political-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/real-estate-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/recipe-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/reference-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/science-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/search-engines\n",
-            "0\n",
+            "118\n",
             "26\n",
             "--\n",
             "http://www.ebizmba.com/articles/seo-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/shopping-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/social-bookmarking-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/social-networking-websites\n",
-            "0\n",
+            "73\n",
             "7\n",
             "--\n",
             "http://www.ebizmba.com/articles/sports-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/travel-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/video-game-websites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/video-websites\n",
-            "0\n",
+            "118\n",
             "24\n",
             "--\n",
             "http://www.ebizmba.com/articles/viral-sites\n",
-            "0\n",
+            "118\n",
             "23\n",
             "--\n",
             "http://www.ebizmba.com/articles/web-2.0-websites\n",
-            "0\n",
+            "118\n",
             "22\n",
             "--\n",
             "http://www.ebizmba.com/articles/web-hosting\n",
-            "0\n",
+            "66\n",
             "16\n",
             "--\n",
             "http://www.ebizmba.com/company\n",
-            "0\n",
+            "62\n",
             "3\n",
             "--\n",
             "http://www.ebizmba.com/contact\n",
-            "0\n",
+            "59\n",
             "3\n",
             "--\n",
             "            name  ...                                               url\n",
@@ -668,6 +653,41 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "lUTMorDBU8tl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#mounting google drive - need to be run only for the first time!\n",
+        "\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qh7nJCdTS5DC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#save the output table\n",
+        "\n",
+        "with open('heatmap.csv', 'w', newline='') as csvfile:\n",
+        "    heatmap = csv.writer(csvfile, delimiter=';', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+        "\n",
+        "    for name in output_df:\n",
+        "        heatmap.writerow(output_df[name])\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "rozGoBBrOj9N",
         "colab_type": "code",
         "colab": {
@@ -677,6 +697,8 @@
         "outputId": "058bfee0-8876-40b6-f7bd-a05b13f190f9"
       },
       "source": [
+        "#investigate the input website\n",
+        "\n",
         "url = 'http://www.ebizmba.com/articles/news-websites'\n",
         "site = request.urlopen(url)\n",
         "soupfile = BeautifulSoup(site)\n",
