--- a/web_scraping.ipynb
+++ b/web_scraping.ipynb
@@ -155,9 +155,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 135
         },
-        "outputId": "1106fd2e-9e5f-422b-ee51-47aa930aaa5d"
+        "outputId": "14ae0c4e-0280-4c63-9ea6-58248bc716ac"
       },
       "source": [
         "# run keyword(s) counter, create output table\n",
@@ -173,12 +173,12 @@
         "  \n",
         "  redditAll = soup.find_all(\"a\")\n",
         "  #soup.prettify()\n",
-        "  keywords=('corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID', 'COVID-19')\n",
+        "  keywords=['corona','Corona','coronavirus','corona virus','Corona Virus', 'Coronavirus', 'COVID', 'COVID-19']\n",
         "  out=[]\n",
         "\n",
         "  for i in keywords:\n",
-        "   x = soup.find_all(string=re.compile('i'))\n",
-        "   out.append(x)\n",
+        "    x = soup.find_all(string=re.compile('i'))\n",
+        "    out.append(x)\n",
         "\n",
         "   counter = 0\n",
         "   for item in out:\n",
@@ -198,91 +198,15 @@
         "print(output_df)\n",
         "  "
       ],
-      "execution_count": 61,
+      "execution_count": 64,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "http://news.yahoo.com\n",
-            "125\n",
-            "8\n",
-            "--\n",
-            "http://news.google.com\n",
-            "781\n",
-            "8\n",
-            "--\n",
-            "http://www.huffingtonpost.com\n",
-            "0\n",
-            "8\n",
-            "--\n",
-            "http://www.cnn.com\n",
-            "230\n",
-            "8\n",
-            "--\n",
-            "http://www.nytimes.com\n",
-            "148\n",
-            "8\n",
-            "--\n",
-            "http://www.foxnews.com\n",
-            "783\n",
-            "8\n",
-            "--\n",
-            "http://www.nbcnews.com\n",
-            "421\n",
-            "8\n",
-            "--\n",
-            "http://www.dailymail.co.uk\n",
-            "1295\n",
-            "8\n",
-            "--\n",
-            "http://www.washingtonpost.com\n",
-            "517\n",
-            "8\n",
-            "--\n",
-            "http://www.theguardian.com\n",
-            "371\n",
-            "8\n",
-            "--\n",
-            "http://www.wsj.com\n",
-            "292\n",
-            "8\n",
-            "--\n",
-            "http://www.abcnews.go.com\n",
-            "323\n",
-            "8\n",
-            "--\n",
-            "http://news.bbc.co.uk\n",
-            "262\n",
-            "8\n",
-            "--\n",
-            "http://www.usatoday.com\n",
-            "154\n",
-            "8\n",
-            "--\n",
-            "http://www.latimes.com\n",
-            "0\n",
-            "8\n",
-            "--\n",
-            "              name  ...                            url\n",
-            "0       news.yahoo  ...          http://news.yahoo.com\n",
-            "1      news.google  ...         http://news.google.com\n",
-            "2   huffingtonpost  ...  http://www.huffingtonpost.com\n",
-            "3              cnn  ...             http://www.cnn.com\n",
-            "4          nytimes  ...         http://www.nytimes.com\n",
-            "5          foxnews  ...         http://www.foxnews.com\n",
-            "6          nbcnews  ...         http://www.nbcnews.com\n",
-            "7        dailymail  ...     http://www.dailymail.co.uk\n",
-            "8   washingtonpost  ...  http://www.washingtonpost.com\n",
-            "9      theguardian  ...     http://www.theguardian.com\n",
-            "10             wsj  ...             http://www.wsj.com\n",
-            "11      abcnews.go  ...      http://www.abcnews.go.com\n",
-            "12        news.bbc  ...          http://news.bbc.co.uk\n",
-            "13        usatoday  ...        http://www.usatoday.com\n",
-            "14         latimes  ...         http://www.latimes.com\n",
-            "\n",
-            "[15 rows x 4 columns]\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-64-a2203340412e>\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    counter = 0\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          ]
         }
       ]
     },
